@@ -1,6 +1,6 @@
 ##########################################################################
 #
-#  Copyright (c) 2010, Image Engine Design Inc. All rights reserved.
+#  Copyright (c) 2010-2012, Image Engine Design Inc. All rights reserved.
 #
 #  Redistribution and use in source and binary forms, with or without
 #  modification, are permitted provided that the following conditions are
@@ -179,7 +179,7 @@ class ClassVectorParameter( IECore.CompoundParameter ) :
 				return parameterName
 
 	@staticmethod
-	def _serialise( parameter ) :
+	def _serialise( parameter, value ) :
 
 		result = [ parameter.__searchPathEnvVar ]
 		
