@@ -1,3 +1,8 @@
+Improvements :
+
+* ParameterParser.serialise accepts an alternate "values" argument, which can be used to avoid parameter validation or to serialise values that aren't held by the parameter.
+* Registered ParameterParser serialisation functions should use the new signature func( parameter, value ). The old signature is still supported, but deprecated.
+
 7.9.0 :
 
 Additions :
